--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "一身转战三千里，一剑曾当百万师。"
 ---
 
 {% for post in paginator.posts %}
